--- a/tensorboard_sample.ipynb
+++ b/tensorboard_sample.ipynb
@@ -8,14 +8,23 @@
    "source": [
     "import os\n",
     "import datetime\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
@@ -33,75 +42,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOG_DIR = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")"
+    "LOG_DIR = os.path.join(os.getcwd(), \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-04-29 22:38:59.377 tensorflow-2-3-cpu-py-ml-t3-medium-73bdff4bfc98ea36a1f702bcd56a:428 INFO utils.py:27] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
-      "[2021-04-29 22:38:59.663 tensorflow-2-3-cpu-py-ml-t3-medium-73bdff4bfc98ea36a1f702bcd56a:428 INFO profiler_config_parser.py:102] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n",
       "Epoch 1/5\n",
-      "   1/1875 [..............................] - ETA: 0s - loss: 2.3101 - accuracy: 0.0625WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
-      "Instructions for updating:\n",
-      "use `tf.profiler.experimental.stop` instead.\n"
+      "   2/1875 [..............................] - ETA: 2:30 - loss: 2.2751 - accuracy: 0.2188WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0046s vs `on_train_batch_end` time: 0.1555s). Check your callbacks.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
-      "Instructions for updating:\n",
-      "use `tf.profiler.experimental.stop` instead.\n"
+      "WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0046s vs `on_train_batch_end` time: 0.1555s). Check your callbacks.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   2/1875 [..............................] - ETA: 2:08 - loss: 2.3618 - accuracy: 0.0625WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0070s vs `on_train_batch_end` time: 0.1302s). Check your callbacks.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0070s vs `on_train_batch_end` time: 0.1302s). Check your callbacks.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2228 - accuracy: 0.9339 - val_loss: 0.1117 - val_accuracy: 0.9656\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2216 - accuracy: 0.9351 - val_loss: 0.1125 - val_accuracy: 0.9651\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0989 - accuracy: 0.9699 - val_loss: 0.0820 - val_accuracy: 0.9729\n",
+      "1875/1875 [==============================] - 7s 3ms/step - loss: 0.0974 - accuracy: 0.9703 - val_loss: 0.0884 - val_accuracy: 0.9718\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0695 - accuracy: 0.9781 - val_loss: 0.0811 - val_accuracy: 0.9758\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0696 - accuracy: 0.9780 - val_loss: 0.0813 - val_accuracy: 0.9726\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0537 - accuracy: 0.9829 - val_loss: 0.0714 - val_accuracy: 0.9787\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0543 - accuracy: 0.9823 - val_loss: 0.0671 - val_accuracy: 0.9804\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0438 - accuracy: 0.9857 - val_loss: 0.0655 - val_accuracy: 0.9819\n"
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0426 - accuracy: 0.9856 - val_loss: 0.0750 - val_accuracy: 0.9774\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f96d33e0990>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f06970da690>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,6 +113,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scratch/logs/fit\n"
+     ]
+    }
+   ],
+   "source": [
+    "EFS_PATH_LOG_DIR = \"/\".join(LOG_DIR.strip(\"/\").split('/')[1:-1])\n",
+    "print (EFS_PATH_LOG_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -135,7 +142,7 @@
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.3 Python 3.7 CPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-west-1:742091327244:image/tensorflow-2.3-cpu-py37-ubuntu18.04-v1"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-west-2:236514542706:image/tensorflow-2.3-cpu-py37-ubuntu18.04-v1"
   },
   "language_info": {
    "codemirror_mode": {
